// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tableSort.js addSprite should add the SVG sprite to the page 1`] = `
"<table class="govuk-table" data-module="table-sorts" id="xml-subs"></table>
    <svg version="1.1" xmlns="http://www.w3.org/2000/svg" id="SVGsprites">
      <style>.l{fill:none;stroke-width:30;stroke-miterlimit:10;}.t{stroke:none;}</style>
      <defs>
        <g id="icon-sort" aria-labeledby="title-sort" aria-describedby="desc-sort" role="image">
          <title id="title-sort">Sort</title>
          <desc id="desc-sort"></desc>
          <path class="t" d="M20.4 233.7L212.5 41.6l192.1 192.1z"></path>
          <path class="l" d="M414.4 223.1L212.5 21.2 10.6 223.1"></path>
          <path class="t" d="M404.6 306L212.5 498.1 20.4 306z"></path>
          <path class="l" d="M10.6 316.6l201.9 201.9 201.9-201.9"></path>
        </g>
        <g id="icon-sort-asc" aria-labeledby="" aria-describedby="" role="presentation">
          <title id="title-sort-asc"></title>
          <desc id="desc-sort-asc"></desc>
          <path class="t" d="M20.4 233.7L212.5 41.6l192.1 192.1z"></path>
          <path class="l" d="M414.4 223.1L212.5 21.2 10.6 223.1"></path>
        </g>
        <g id="icon-sort-des" aria-labeledby="" aria-describedby="" role="presentation">
          <title id="title-sort-des"></title>
          <desc id="desc-sort-des"></desc>
          <path class="t" d="M404.6 0L212.5 192.1 20.4 0z"></path>
          <path class="l" d="M10.6 10.6l201.9 201.9L414.4 10.6"></path>
        </g>
      </defs>
    </svg>"
`;

exports[`tableSort.js addSprite should not add the SVG sprite if the table-sorts module is not in the page 1`] = `""`;

exports[`tableSort.js sortLinks should add a button to the page 1`] = `
"
        <button class="govuk-button govuk-button--secondary" data-query="bunchOfThings=YES&amp;sortOrder=ASC" data-sort="status" type="button"><span>Sort</span>
    <svg viewBox="0 0 425 233.7" focusable="false" class="sort asc" aria-hidden="true">
      <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-sort-asc"></use>
    </svg>
    <svg viewBox="0 0 425 233.7" focusable="false" class="sort des" aria-hidden="true">
      <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-sort-des"></use>
    </svg></button>
        <button class="govuk-button govuk-button--secondary" data-query="bunchOfThings=YES&amp;sortOrder=DSC" data-sort="status" type="button"><span>Sort</span>
    <svg viewBox="0 0 425 233.7" focusable="false" class="sort asc" aria-hidden="true">
      <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-sort-asc"></use>
    </svg>
    <svg viewBox="0 0 425 233.7" focusable="false" class="sort des" aria-hidden="true">
      <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-sort-des"></use>
    </svg></button>
      "
`;

exports[`tableSort.js sortTableByColumn should sort the table by the specified column in ascending order 1`] = `
"
      <table class="govuk-table">
        <thead>
        <tr>
          <th class="govuk-table__header" data-column="status">Status</th>
          <th class="govuk-table__header" data-column="upload-date">Upload date</th>
          <th class="govuk-table__header" data-column="reporting-year">Reporting year</th>
        </tr>
        </thead>
        <tbody><tr class="govuk-table__row">
          <td class="govuk-table__cell">Failed</td>
          <td class="govuk-table__cell">27 Nov 2024</td>
          <td class="govuk-table__cell">1957</td>
        </tr><tr class="govuk-table__row">
          <td class="govuk-table__cell">Passed</td>
          <td class="govuk-table__cell">8 Nov 2024</td>
          <td class="govuk-table__cell">2024</td>
        </tr></tbody>
      </table>
      "
`;

exports[`tableSort.js sortTableByColumn should sort the table by the specified column in descending order 1`] = `
"
      <table class="govuk-table">
        <thead>
        <tr>
          <th class="govuk-table__header" data-column="status">Status</th>
          <th class="govuk-table__header" data-column="upload-date">Upload date</th>
          <th class="govuk-table__header" data-column="reporting-year">Reporting year</th>
        </tr>
        </thead>
        <tbody><tr class="govuk-table__row">
          <td class="govuk-table__cell">Passed</td>
          <td class="govuk-table__cell">8 Nov 2024</td>
          <td class="govuk-table__cell">2024</td>
        </tr><tr class="govuk-table__row">
          <td class="govuk-table__cell">Failed</td>
          <td class="govuk-table__cell">27 Nov 2024</td>
          <td class="govuk-table__cell">1957</td>
        </tr></tbody>
      </table>
      "
`;

exports[`tableSort.js switchIt should replace a link with a button 1`] = `
"<button class="govuk-button govuk-button--secondary" data-query="bunchOfThings=YES&amp;sortOrder=ASC" data-sort="status" type="button"><span>Sort</span>
    <svg viewBox="0 0 425 233.7" focusable="false" class="sort asc" aria-hidden="true">
      <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-sort-asc"></use>
    </svg>
    <svg viewBox="0 0 425 233.7" focusable="false" class="sort des" aria-hidden="true">
      <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-sort-des"></use>
    </svg></button>"
`;
